# XAGM

./: README.md  geoutils.py  pyproject.toml  testing.py
XAGM.egg-info/: PKG-INFO  SOURCES.txt
basis/: __init__.py  linear.py  metrics.py
manifolds/: __init__.py  calc.py  metrics.py  topology.py  vectors.py
src/xagm.egg-info/: PKG-INFO
src/xagm/manifolds/: calc.py
