[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "XAGM"
version = "0.1.0"
dependencies = [
    "jax", "jaxlib", "jaxtyping"
]
# Add any dependencies you need here, e.g., ["jax", "jaxlib"]

[tool.setuptools]
# 1. Explicitly list the folders that are Python packages
packages = ["manifolds", "basis"]
py-modules = ["geoutils", "testing"]

